@@ -1,4 +1,5 @@
 1.17.1 (July 25, 2025)
+ - Updated the Redis storage to avoid lazy require of the `ioredis` dependency when the SDK is initialized.
  - Bugfix - Enhanced HTTP client module to implement timeouts for failing requests that might otherwise remain pending indefinitely on some Fetch API implementations, pausing the SDK synchronization process.
 
 1.17.0 (September 6, 2024)
